--- a/app/views/requestor/index.html.erb
+++ b/app/views/requestor/index.html.erb
@@ -1,4 +1,5 @@
-<% content_for :sidenav do %><% end %>
+<% content_for :sidenav do %>
+<% end %>
 
 <div>
   <%= render partial: "shared/sidenav" %>
