--- a/app/views/sites/_form.html.erb
+++ b/app/views/sites/_form.html.erb
@@ -1,121 +1,150 @@
 <div data-controller="form">
-
-  <%= form_with(model: site) do |form| %>
+    <%= form_with(model: site) do |form| %>
     <%= render "shared/error_messages", resource: form.object %>
-    <% if @site.new_record? %>
-      <div class="form-group">
-        <%= form.label :customer_id, "Agency Customer*" %>
-        <%= form.select :customer_id, options_from_collection_for_select(@customers, :id, :name, @customer_id), {prompt: "Please select A Customer"}, {class: 'form-select' }  %>
+      
+        <div class="mt-5 md:col-span-2 md:mt-0">
+          <div class="overflow-hidden shadow sm:rounded-md">
+            <div class="bg-white px-4 py-5 sm:p-6">
+              <div class="grid grid-cols-6 gap-6">
+                <div class="col-span-8 sm:col-span-6">
+                    <% if @site.new_record? %>
+                        <div class="form-group">
+                            <%= form.label :customer_id, "Agency Customer*" %>
+                            <%= form.select :customer_id, options_from_collection_for_select(@customers, :id, :name, @customer_id), {prompt: "Please select A Customer"}, {class: 'form-select' }  %>
+                        </div>
+                        <% else %>
+
+                        <template data-form-target="template">
+                            <tr>
+                            <%= form.fields_for :departments, Department.new do |new_dept| %>
+                                <td class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6 md:pl-0"><%= new_dept.text_field :name, class: "block w-full rounded-md border-gray-300 shadow-sm focus:border-tokanisecondary-500 focus:ring-tokanisecondary-500 sm:text-sm" %></td>
+                                <td class="whitespace-nowrap py-4 px-3 text-sm text-gray-500"><%= new_dept.text_field :location, class: "block w-full rounded-md border-gray-300 shadow-sm focus:border-tokanisecondary-500 focus:ring-tokanisecondary-500 sm:text-sm" %></td>
+                                <td class="whitespace-nowrap py-4 px-3 text-sm text-gray-500"><%= new_dept.text_field :accounting_unit_code, class: "block w-full rounded-md border-gray-300 shadow-sm focus:border-tokanisecondary-500 focus:ring-tokanisecondary-500 sm:text-sm" %></td>
+                            <% end %>
+                            </tr>
+                        </template>
+
+                        <template data-form-target="templateHeader">
+                            <tr id="headerRow">
+                            <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6 md:pl-0">Department Name</th>
+                            <th cope="col" class="py-3.5 px-3 text-left text-sm font-semibold text-gray-900">Location</th>
+                            <th scope="col" class="py-3.5 px-3 text-left text-sm font-semibold text-gray-900">Accounting Unit Code</th>
+                        </tr>
+                        </template>
+
+                        <div class="form-group block text-md font-medium text-gray-700">Customer: <%= @site.customer&.name %></div>
+                    <% end %>
+                   
+                </div>
+                
+                <div class="col-span-8 sm:col-span-6">
+                    <%= form.label :name, class: "block text-sm font-medium text-gray-700" %>
+                    <%= form.text_field :name, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
+                </div>
+                <div class="col-span-8 sm:col-span-3">
+                    <%= form.label :contact_name, class: "block text-sm font-medium text-gray-700" %>
+                    <%= form.text_field :contact_name, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
+                </div>
+                <div class="col-span-6 sm:col-span-6 lg:col-span-3">
+                    <%= form.label :email, class: "block text-sm font-medium text-gray-700" %>
+                    <%= form.text_field :email, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
+                </div>
+                <div class="col-span-6 sm:col-span-6 lg:col-span-3">
+                    <%= form.label :contact_phone, class: "block text-sm font-medium text-gray-700" %>
+                    <%= form.text_field :contact_phone, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
+                </div>
+               
+                <div class="col-span-6 sm:col-span-3">
+                    <%= form.label :address, class: "block text-sm font-medium text-gray-700" %>
+                    <%= form.text_field :address, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
+                </div>
+
+                <div class="col-span-6 sm:col-span-3">
+                    <%= form.label :city, class: "block text-sm font-medium text-gray-700" %>
+                    <%= form.text_field :city, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
+                </div>
+                <div class="col-span-6 sm:col-span-6 lg:col-span-3">
+                    <%= form.label :state, class: "block text-sm font-medium text-gray-700" %>
+                    <%= form.text_field :state, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
+                </div>
+                <div class="col-span-6 sm:col-span-6 lg:col-span-3">
+                    <%= form.label :zip_code, class: "block text-sm font-medium text-gray-700" %>
+                    <%= form.text_field :zip_code, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
+                </div>
+                <div class="col-span-6 sm:col-span-6 lg:col-span-6">
+                    <%= form.label :notes, class: "block text-sm font-medium text-gray-700" %>
+                    <%= form.text_area :notes, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
+                </div>    
+            </div>
+             <br>
+              <div class="relative flex items-start">
+                <div class="flex h-5 items-center">
+                  <%= form.check_box :active, class:"h-4 w-4 rounded border-gray-300 text-tokanisecondary-600 focus:ring-tokanisecondary-500" %>
+                </div>
+                <div class="ml-3 text-sm">
+                  <%= form.label :is_active, class:"font-medium text-gray-700" %>
+                  <p id="active" class="text-gray-500">This site is active.</p>
+                </div>
+            
+            </div>
+            <br>
+
+            <% unless @site.new_record? %>
+<hr>
+<br>
+            <div class="px-4 sm:px-6 lg:px-8">
+                <div class="sm:flex sm:items-center">
+                  <div class="sm:flex-auto">
+                    <h1 class="text-xl font-semibold text-gray-700">Departments</h1>
+                    <p class="mt-2 text-sm text-gray-500">The departments associated with this site.</p>
+                  </div>
+                  <div class="mt-4 sm:mt-0 sm:ml-16 sm:flex-none">
+                    <%= button_tag '+ Add Department'.html_safe, type:'button', data: {action: 'click->form#addFields'}, class: "inline-flex items-center justify-center rounded-md border border-transparent bg-tokaniprimary-600 px-4 py-2 text-xs font-medium text-white shadow-sm hover:bg-tokaniprimary-700 focus:outline-none focus:ring-2 focus:ring-tokaniprimary-500 focus:ring-offset-2 sm:w-auto"  %>
+                  </div>
+                </div>
+                <div class="mt-8 flex flex-col">
+                  <div class="-my-2 -mx-4 overflow-x-auto sm:-mx-6 lg:-mx-8">
+                    <div class="inline-block min-w-full py-2 align-middle md:px-6 lg:px-8">
+                      <table class="min-w-full divide-y divide-gray-300">
+                        <thead data-form-target="addHeader">
+                          <tr id="headerRow">
+                            <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-700 sm:pl-6 md:pl-0"> Department Name</th>
+                            <th scope="col" class="py-3.5 px-3 text-left text-sm font-semibold text-gray-700">Location</th>
+                            <th scope="col" class="py-3.5 px-3 text-left text-sm font-semibold text-gray-700">Accounting Unit Code</th>  
+                          </tr>
+                        </thead>
+                        <tbody data-form-target="addDst" class="divide-y divide-gray-200">
+                            <%= form.fields_for :departments do |dept_form| %>
+                            <tr>
+                            <td class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6 md:pl-0"><%= dept_form.text_field :name, class: "block w-full rounded-md border-gray-300 shadow-sm focus:border-tokanisecondary-500 focus:ring-tokanisecondary-500 sm:text-sm" %></td>
+                            <td class="whitespace-nowrap py-4 px-3 text-sm text-gray-500"><%= dept_form.text_field :location, class: "block w-full rounded-md border-gray-300 shadow-sm focus:border-tokanisecondary-500 focus:ring-tokanisecondary-500 sm:text-sm" %></td>
+                            <td class="whitespace-nowrap py-4 px-3 text-sm text-gray-500"><%= dept_form.text_field :accounting_unit_code, class: "block w-full rounded-md border-gray-300 shadow-sm focus:border-tokanisecondary-500 focus:ring-tokanisecondary-500 sm:text-sm" %></td>
+                          </tr>
+                          <% end %>
+                        </tbody>
+                      </table>
+                      <% end %>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              
+             
+           
+            <div class="bg-gray-50 px-4 py-3 text-right sm:px-6">
+                <%= form.button button_text(form.send(:submit_default_value)), class:"inline-flex justify-center rounded-md border border-transparent bg-tokanisecondary-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-tokanisecondary-700 focus:outline-none focus:ring-2 focus:ring-tokanisecondary-500 focus:ring-offset-2" %>
+                <% if form.object.new_record? %>
+                    <%= link_to t("cancel"), sites_path, class:"inline-flex justify-center rounded-md border border-transparent bg-tokaniprimary-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-tokaniprimary-700 focus:outline-none focus:ring-2 focus:ring-tokaniprimary-500 focus:ring-offset-2" %>
+                <% else %>
+                    <%= link_to t("cancel"), sites_path(@site), class:"inline-flex justify-center rounded-md border border-transparent bg-tokaniprimary-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-tokaniprimary-700 focus:outline-none focus:ring-2 focus:ring-tokaniprimary-500 focus:ring-offset-2" %>
+                <% end %>
+            </div>
+          </div> 
+        </div>
       </div>
-    <% else %>
-
-      <template data-form-target="template">
-        <tr>
-          <%= form.fields_for :departments, Department.new do |new_dept| %>
-            <td class="text-sm"><%= new_dept.text_field :name %></td>
-            <td class="text-sm"><%= new_dept.text_field :location %></td>
-            <td class="text-sm"><%= new_dept.text_field :accounting_unit_code %></td>
-          <% end %>
-        </tr>
-      </template>
-
-      <template data-form-target="templateHeader">
-        <tr id="headerRow">
-          <th class="text-uppercase text-sm font-weight-bolder opacity-7">Department Name</th>
-          <th class="text-uppercase text-sm font-weight-bolder opacity-7">Location</th>
-          <th class="text-uppercase text-start text-sm font-weight-bolder opacity-7">Accounting Unit Code</th>
-       </tr>
-      </template>
-
-      <div class="form-group">Customer: <%= @site.customer&.name %></div>
-    <% end %>
-
-    <div class="form-group">
-      <%= form.label :name %>
-      <%= form.text_field :name, class: "form-control" %>
     </div>
-
-    <div class="form-group">
-      <%= form.label :contact_name %>
-      <%= form.text_field :contact_name, class: "form-control" %>
-    </div>
-
-    <div class="form-group">
-      <%= form.label :email %>
-      <%= form.text_field :email, class: "form-control" %>
-    </div>
-
-    <div class="form-group">
-      <%= form.label :address %>
-      <%= form.text_field :address, class: "form-control" %>
-    </div>
-
-    <div class="form-group">
-      <%= form.label :city %>
-      <%= form.text_field :city, class: "form-control" %>
-    </div>
-
-    <div class="form-group">
-      <%= form.label :state %>
-      <%= form.text_field :state, class: "form-control" %>
-    </div>
-
-    <div class="form-group">
-      <%= form.label :zip_code %>
-      <%= form.text_field :zip_code, class: "form-control" %>
-    </div>
-
-    <div class="form-group">
-      <%= form.label :active %>
-      <%= form.check_box :active, class: "form-checkbox" %>
-    </div>
-
-    <div class="form-group">
-      <%= form.label :contact_phone %>
-      <%= form.text_field :contact_phone, class: "form-control" %>
-    </div>
-
-    <div class="form-group">
-      <%= form.label :notes %>
-      <%= form.text_area :notes, class: "form-control" %>
-    </div>
-
-    <% unless @site.new_record? %>
-      <h4>Departments</h4>
-      <div class="">
-        <%= button_tag '+ Add Department'.html_safe, type:'button', data: {action: 'click->form#addFields'}, class: "btn"  %>
-      </div>
-
-      <table class='table-auto' style="width: 50%">
-        <thead data-form-target="addHeader">
-          <tr id="headerRow">
-            <th class="">Department Name</th>
-            <th class="">Location</th>
-            <th class="">Accounting Unit Code</th>
-          </tr>
-        </thead>
-        <tbody data-form-target="addDst">
-          <%= form.fields_for :departments do |dept_form| %>
-            <tr>
-              <td class=""><%= dept_form.text_field :name %></td>
-              <td class=""><%= dept_form.text_field :location %></td>
-              <td class=""><%= dept_form.text_field :accounting_unit_code %></td>
-            </tr>
-          <% end %>
-        </tbody>
-      </table>
-      <br>
-    <% end %>
-
-    <div>
-      <%= form.button button_text(form.send(:submit_default_value)), class: "btn btn-primary" %>
-
-      <% if form.object.new_record? %>
-        <%= link_to t("cancel"), sites_path, class: "btn btn-white" %>
-      <% else %>
-        <%= link_to t("cancel"), site_path(@site), class: "btn btn-white" %>
-      <% end %>
-    </div>
-  <% end %>
-
+  </div>
+</main>
+</div>
+<% end %>
 </div>
