--- a/app/views/sites/_site.html.erb
+++ b/app/views/sites/_site.html.erb
@@ -1,68 +1,52 @@
-<div id="<%= dom_id site %>">
-  <div class="mb-4">
-    <p class="text-sm font-medium text-gray-500">Name</p>
-    <%= site.name %>
+<div class="overflow-hidden bg-white shadow sm:rounded-lg">
+  <div class="px-4 py-5 sm:px-6">
+    <h3 class="text-lg font-medium leading-6 text-gray-900"><%= site.name %></h3>
   </div>
-  <div class="mb-4">
-    <p class="text-sm font-medium text-gray-500">Contact name</p>
-    <%= site.contact_name %>
-  </div>
-  <div class="mb-4">
-    <p class="text-sm font-medium text-gray-500">Email</p>
-    <%= site.email %>
-  </div>
-  <div class="mb-4">
-    <p class="text-sm font-medium text-gray-500">Address</p>
-    <%= site.address %>
-  </div>
-  <div class="mb-4">
-    <p class="text-sm font-medium text-gray-500">City</p>
-    <%= site.city %>
-  </div>
-  <div class="mb-4">
-    <p class="text-sm font-medium text-gray-500">State</p>
-    <%= site.state %>
-  </div>
-  <div class="mb-4">
-    <p class="text-sm font-medium text-gray-500">Zip code</p>
-    <%= site.zip_code %>
-  </div>
-  <div class="mb-4">
-    <p class="text-sm font-medium text-gray-500">Active</p>
-    <%= site.active %>
-  </div>
-  <div class="mb-4">
-    <p class="text-sm font-medium text-gray-500">Notes</p>
-    <%= site.notes %>
-  </div>
-  <div class="mb-4">
-    <p class="text-sm font-medium text-gray-500">Contact phone</p>
-    <%= site.contact_phone %>
-  </div>
-
-  <h4>Departments</h4>
-  <% if @site.departments.any? %>
-    <table class='table-auto' style="width: 50%">
-      <thead>
-        <tr>
-          <th class="">Department Name</th>
-          <th class="">Location</th>
-          <th class="">Accounting Unit Code</th>
-        </tr>
-      </thead>
-      <tbody>
-       <% @site.departments.each do |department| %>
-          <tr>
-            <td><%= department.name %></td>
-            <td><%= department.location %></td>
-            <td><%= department.accounting_unit_code %></td>
-          </tr>
+  <div class="border-t border-gray-200 px-4 py-5 sm:p-0">
+    <dl class="sm:divide-y sm:divide-gray-200">
+      <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5 sm:px-6">
+        <dt class="text-sm font-medium text-tokanisecondary-600">Site Name</dt>
+        <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0"><%= site.name %></dd>
+      </div>
+      <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5 sm:px-6">
+        <dt class="text-sm font-medium text-tokanisecondary-600">Contact Name</dt>
+        <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0"> <%= site.contact_name %></dd>
+      </div>
+      <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5 sm:px-6">
+        <dt class="text-sm font-medium text-tokanisecondary-600">Email address</dt>
+        <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0"><%= site.email %></dd>
+      </div>
+      <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5 sm:px-6">
+        <dt class="text-sm font-medium text-tokanisecondary-600">Address</dt>
+        <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0"><%= site.address %><br>
+          <%= site.city %>, <%= site.state %> <%= site.zip_code %></dd> 
+      </div>
+      <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5 sm:px-6">
+        <dt class="text-sm font-medium text-tokanisecondary-600">Contact Phone</dt>
+        <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0"><%= site.contact_phone %></dd>
+      </div>
+      <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5 sm:px-6">
+        <dt class="text-sm font-medium text-tokanisecondary-600">Is Active?</dt>
+        <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0"><%= yes_no(site.active) %></dd>
+      </div>
+      <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5 sm:px-6">
+        <dt class="text-sm font-medium text-tokanisecondary-600">Notes</dt>
+        <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0"><%= site.notes %></dd>
+      </div>
+      <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5 sm:px-6">
+        <dt class="text-sm font-medium text-tokanisecondary-600">Departments</dt>
+        <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0">
+          <% if @site.departments.any? %>
+            <% @site.departments.each do |department| %>
+              <%= department.name %>
+            <% end %>
+          <% else %>
+            <p>No departments present.</p>
+          <br>    
         <% end %>
-
-      </tbody>
-    </table>
-  <% else %>
-    <p>No departments present.</p>
-  <% end %>
-
+        </dd>  
+      </div>   
+    </dl>
 </div>
+</div>
+
