--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -11,7 +11,6 @@
             <div class="sm:flex sm:items-center">
               <div class="sm:flex-auto">
                 <h1 class="text-xl font-semibold text-gray-900">Sites</h1>
-
                 <!--
                 <div class="text-sm font-medium mt-2 text-gray-700">
                   <span class="text-tokanisecondary-500">Sort by:</span>
@@ -30,7 +29,7 @@
                 -->
               </div>
                <div class="mt-4 sm:mt-0 sm:ml-16 sm:flex-none">
-                <button type="button" class="inline-flex items-center justify-center rounded-md border border-transparent bg-tokanisecondary-600 px-4 py-2 text-sm font-medium text-white shadow-sm hover:bg-tokanisecondary-700 focus:outline-none focus:ring-2 focus:ring-tokanisecondary-500 focus:ring-offset-2 sm:w-auto" onclick="window.location.href='/sites/new'">Add Site</button>
+                <button type="button" class="inline-flex items-center justify-center rounded-md border border-transparent bg-tokanisecondary-600 px-4 py-2 text-sm font-medium text-white shadow-sm hover:bg-tokanisecondary-700 focus:outline-none focus:ring-2 focus:ring-tokanisecondary-500 focus:ring-offset-2 sm:w-auto" onclick="window.location.href='/sites/new'">New Site</button>
               </div>
             </div>
             <div class="-mx-4 mt-8 overflow-hidden shadow ring-1 ring-black ring-opacity-5 sm:-mx-6 md:mx-0 md:rounded-lg">
@@ -50,7 +49,7 @@
                 <% @sites.each do |site| %>
                   <tr>
                     <td class="w-full max-w-0 py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:w-auto sm:max-w-none sm:pl-6">
-                        <%= site.name %>
+                      <%= link_to site.name, site_path(site) %>
                       <dl class="font-normal lg:hidden">
                         <dt class="sr-only">Email</dt>
                         <dd class="mt-1 truncate text-gray-700"><%= site.email %></dd>
