--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -40,9 +40,7 @@
                     <th scope="col" class="hidden px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 lg:table-cell">Customer</th>
                     <th scope="col" class="hidden px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 lg:table-cell">Departments</th>
                     <th scope="col" class="px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900">Active</th>
-                    <th scope="col" class="relative py-3.5 pl-3 pr-4 sm:pr-6">
-                      <span class="sr-only">Edit</span>
-                    </th>
+                    <th scope="col" class="px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900">Edit</th>  
                   </tr>
                 </thead>
                 <tbody class="divide-y divide-gray-200 bg-white">
@@ -62,7 +60,7 @@
                     <td class="hidden px-3 py-4 text-sm text-gray-500 lg:table-cell"><%= site.customer&.name %></td>
                     <td class="hidden px-3 py-4 text-sm text-gray-500 lg:table-cell"><%= site.departments.map(&:name).join(', ') %></td>
                     <td class="hidden px-3 py-4 text-sm text-gray-500 sm:table-cell"><%= yes_no(site.active) %></td>
-                    <td class="py-4 pl-3 pr-4 text-right text-sm font-medium sm:pr-6">
+                    <td class="hidden px-3 py-4 text-sm text-gray-500 sm:table-cell">
                       <a href="<%= edit_site_path(site) %>" class="text-tokanisecondary-600 hover:text-tokanisecondary-900">Edit<span class="sr-only">, <%= site.id %></span></a>
                     </td>
                   </tr>
