--- a/app/views/shared/_left_nav.html.erb
+++ b/app/views/shared/_left_nav.html.erb
@@ -2,3 +2,4 @@
 <%= nav_link_to "Sites", sites_path, class: "nav-link" %>
 <%= nav_link_to "Customers", customers_path, class: "nav-link" %>
 <%= nav_link_to "Specialties", specialties_path, class: "nav-link" %>
+<%= nav_link_to "Pay Bill Rates", pay_bill_rates_path, class: "nav-link" %>
