fixed partial variable issue erroring on turbo strem

--- a/app/views/sites/_site.html.erb
+++ b/app/views/sites/_site.html.erb
@@ -36,8 +36,8 @@
       <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5 sm:px-6">
         <dt class="text-sm font-medium text-tokanisecondary-600">Departments</dt>
         <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0">
-          <% if @site.departments.any? %>
-            <% @site.departments.each do |department| %>
+          <% if site.departments.any? %>
+            <% site.departments.each do |department| %>
               <%= department.name %>
             <% end %>
           <% else %>
