agency interpreter index work

--- a/app/views/interpreters/index.html.erb
+++ b/app/views/interpreters/index.html.erb
@@ -1,3 +1,4 @@
+<%= content_for :title, "Interpreters" %>
 
 <div>
   <%= render partial: "shared/sidenav" %>
@@ -51,4 +52,11 @@
       </div>
     </main>
   </div>
+  <% if @pagy.pages > 1 %>
+    <div class="my-6 text-center">
+      <%== pagy_nav(@pagy) %>
+    </div>
+  <% end %>
 </div>
+
+
