--- a/app/views/appointments/_form.html.erb
+++ b/app/views/appointments/_form.html.erb
@@ -7,6 +7,11 @@
   </div>
 
   <div class="form-group">
+    <%= form.label :interpreter_id, "Interpreter*" %>
+    <%= form.select :interpreter_id, options_from_collection_for_select(@interpreters, :id, :name), {prompt: "Please select An Interpreter"}, {class: 'form-select' }  %>
+  </div>
+
+  <div class="form-group">
     <%= form.label :ref_number %>
     <%= form.text_field :ref_number, class: "form-control" %>
   </div>
