--- a/app/views/interpreters/show.html.erb
+++ b/app/views/interpreters/show.html.erb
@@ -1,5 +1,5 @@
-<%= content_for :title, "Customers ##{@customer.id}" %>
-<%= turbo_stream_from @customer %>
+<%# content_for :title, "Interpreters ##{@interpreter.id}" %>
+<%= turbo_stream_from @interpreter %>
 <%= render partial: "shared/sidenav" %>
 <div class="flex flex-1 flex-col md:pl-64">
   <main class="flex-1">
@@ -9,19 +9,19 @@
             <div class="sm:flex sm:items-center pb-6">
                 <div class="sm:flex-auto"> 
                   <h1 class="text-xl font-semibold text-gray-900">
-                    <%= link_to "Customers", customers_path, class: "text-tokanisecondary-500" %>
+                    <%= link_to "Interpreters", interpreters_path, class: "text-tokanisecondary-500" %>
                       <span class="text-gray-400 font-light mx-2">\</span>
-                      <%= @customer.name %>
+                      <%= @interpreter.last_name %>, <%= @interpreter.first_name %>
                   </h1>
                 </div>
                   <div class="mt-4 sm:mt-0 sm:ml-16 sm:flex-none">
-                    <%= link_to t("edit"), edit_customer_path(@customer), class: "btn btn-tokani_purple" %>
+                    <%= link_to t("edit"), edit_interpreter_path(@interpreter), class: "btn btn-tokani_purple" %>
                   </div>
                 </div>
           
 
                 <div class="p-8 bg-white rounded shadow">
-                  <%= render partial: 'customer', locals: { customer: @customer } %>
+                  <%= render partial: 'interpreter', locals: { interpreter: @interpreter } %>
                 </div>
             </div>
           </div>
