--- a/app/views/interpreters/_interpreter.html.erb
+++ b/app/views/interpreters/_interpreter.html.erb
@@ -1,73 +1,60 @@
 <div class="overflow-hidden bg-white shadow sm:rounded-lg">
   <div class="px-4 py-5 sm:px-6">
-    <h3 class="text-lg font-medium leading-6 text-gray-900"><%= customer.name %></h3>
+    <h3 class="text-lg font-medium leading-6 text-gray-900"><%= interpreter.last_name %>, <%= interpreter.first_name %></h3>
   </div>
   <div class="border-t border-gray-200 px-4 py-5 sm:p-0">
     <dl class="sm:divide-y sm:divide-gray-200">
       <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5 sm:px-6">
         <dt class="text-sm font-medium text-tokanisecondary-600">Customer name</dt>
-        <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0"><%= customer.name %></dd>
+        <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0"><%= interpreter.first_name %></dd>
       </div>
       <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5 sm:px-6">
-        <dt class="text-sm font-medium text-tokanisecondary-600">Contact Name</dt>
-        <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0"><%= customer.customer_detail.contact_name %></dd>
+        <dt class="text-sm font-medium text-tokanisecondary-600">Email Address</dt>
+        <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0"><%= interpreter.email %></dd>
       </div>
-      <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5 sm:px-6">
-        <dt class="text-sm font-medium text-tokanisecondary-600">Email address</dt>
-        <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0"><%= customer.customer_detail.email %></dd>
-      </div>
+      
       <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5 sm:px-6">
         <dt class="text-sm font-medium text-tokanisecondary-600">Address</dt>
-        <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0"><%= customer.physical_address.line1 %><br>
-          <%= customer.physical_address.city %>, <%= customer.physical_address.state %> <%= customer.physical_address.postal_code %></dd> 
+        <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0"><%= interpreter.interpreter_detail.address %><br>
+          <%= interpreter.interpreter_detail.city %>, <%= interpreter.interpreter_detail.state %> <%= interpreter.interpreter_detail.zip %></dd> 
       </div>
       <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5 sm:px-6">
         <dt class="text-sm font-medium text-tokanisecondary-600">Phone</dt>
-        <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0"><%= customer.customer_detail.phone %></dd>
+        <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0"><%= interpreter.interpreter_detail.primary_phone %></dd>
       </div>
       <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5 sm:px-6">
-        <dt class="text-sm font-medium text-tokanisecondary-600">Fax</dt>
-        <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0"><%= customer.customer_detail.fax %></dd>
+        <dt class="text-sm font-medium text-tokanisecondary-600">Gender</dt>
+        <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0"><%= interpreter.interpreter_detail.gender %></dd>
       </div>
       <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5 sm:px-6">
-        <dt class="text-sm font-medium text-tokanisecondary-600">Is Active?</dt>
-        <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0"><%= yes_no(customer.is_active) %></dd>
+        <dt class="text-sm font-medium text-tokanisecondary-600">Interpreter Type</dt>
+        <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0"><%= interpreter.interpreter_detail.interpreter_type %></dd>
       </div>
       <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5 sm:px-6">
-        <dt class="text-sm font-medium text-tokanisecondary-600">Notes</dt>
-        <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0"><%= customer.customer_detail.notes %></dd>
-      </div>
-      <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5 sm:px-6">
-        <dt class="text-sm font-medium text-tokanisecondary-600">In-Person Appointments?</dt>
-        <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0"><%= yes_no(customer.customer_detail.appointments_in_person) %></dd>
-      </div>
-      <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5 sm:px-6">
-        <dt class="text-sm font-medium text-tokanisecondary-600">Video Appointments?</dt>
-        <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0"><%= yes_no(customer.customer_detail.appointments_video) %></dd>
-      </div>
-      <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5 sm:px-6">
-        <dt class="text-sm font-medium text-tokanisecondary-600">Phone Appointments?</dt>
-        <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0"><%= yes_no(customer.customer_detail.appointments_phone) %></dd>
-      </div>
-      <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5 sm:px-6">
-        <dt class="text-sm font-medium text-tokanisecondary-600">Sites</dt>
-        <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0">
-
-          <% @customer.sites.each do |site| %>
-          <%= link_to site.name, site_path(site) %>
-          
-          <br>    
-        <% end %>
+        <dt class="text-sm font-medium text-tokanisecondary-600">Emergency Contact</dt>
+        <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0"><%= interpreter.interpreter_detail.emergency_contact_name %><br>
+          <%= interpreter.interpreter_detail.emergency_contact_phone %>
         </dd>
+      </div>
+      <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5 sm:px-6">
+        <dt class="text-sm font-medium text-tokanisecondary-600">Start Date</dt>
+        <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0"><%= interpreter.interpreter_detail.start_date %></dd>
+      </div>
+      <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5 sm:px-6">
+        <dt class="text-sm font-medium text-tokanisecondary-600">DOB</dt>
+        <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0"><%= interpreter.interpreter_detail.dob %></dd>
+      </div>
+      <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5 sm:px-6">
+        <dt class="text-sm font-medium text-tokanisecondary-600">Drivers License</dt>
+        <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0"><%= interpreter.interpreter_detail.drivers_license %></dd>
+      </div>
+      
         
       </div>
       
     </dl>
 
-    <div class=" px-4 pb-6 text-right sm:px-6">
-      <%= link_to "Add New Site", new_site_path(customer_id: @customer.id), class: "inline-flex justify-center rounded-md border border-transparent bg-tokanisecondary-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-tokanisecondary-700 focus:outline-none focus:ring-2 focus:ring-tokanisecondary-500 focus:ring-offset-2" %>
-      <br>
-  </div>
+    
   </div>
 </div>
 
