standardrb fixes and updated fixtures.

--- a/app/views/requestors/_requestor.html.erb
+++ b/app/views/requestors/_requestor.html.erb
@@ -23,7 +23,7 @@
         </div>
         <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5 sm:px-6">
           <dt class="text-sm font-medium text-tokanisecondary-600">Requestor Type</dt>
-          <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0"><%= requestor.requestor_detail.requestor_type %></dd>
+          <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0"><%= requestor.requestor_detail.requestor_type.titleize %></dd>
         </div>      
         <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5 sm:px-6">
             <dt class="text-sm font-medium text-tokanisecondary-600">Offsite Requestor</dt>
