--- a/app/views/requestors/edit.html.erb
+++ b/app/views/requestors/edit.html.erb
@@ -20,7 +20,7 @@
           
 
                 <div class="p-8 bg-white rounded shadow">
-                  <%= render "form", requestor: @requestor %>
+                  <%= render partial: "form", locals: { requestor: @requestor, account_customers: @account_customers } %>
                  
                 </div>
             </div>
