tokani admin can create an agency

--- a/app/views/dashboard/_tokani_admin.html.erb
+++ b/app/views/dashboard/_tokani_admin.html.erb
@@ -3,5 +3,5 @@
 <% end %>
 
 <div class="text-center">
-  <%= link_to "Create Account", "#", class: "btn bg-tokaniprimary-500 text-white hover:text-white hover:bg-tokaniprimary-400" %>
+  <%= link_to "Create Account", new_agency_path, class: "btn bg-tokaniprimary-500 text-white hover:text-white hover:bg-tokaniprimary-400" %>
 </div>
