added in the ablility to create agency admin on account from tokani admin perspective

--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -1,3 +1,5 @@
+<%= current_account_user.roles %>
+
 <% if current_account_user.roles["interpreter"] %>
   <%= render partial: "interpreter" %>
 <% elsif current_account_user.roles["agency_admin"] %>
