Sites and departments added to requestor

--- a/app/views/requestors/_requestor.html.erb
+++ b/app/views/requestors/_requestor.html.erb
@@ -9,6 +9,14 @@
           <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0"><%= get_customer(requestor.requestor_detail) %></dd>
         </div>
         <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5 sm:px-6">
+            <dt class="text-sm font-medium text-tokanisecondary-600">Site </dt>
+            <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0"><%= get_site(requestor.requestor_detail) %></dd>
+          </div>
+          <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5 sm:px-6">
+            <dt class="text-sm font-medium text-tokanisecondary-600">Department </dt>
+            <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0"><%= get_department(requestor.requestor_detail) %></dd>
+          </div>
+        <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5 sm:px-6">
           <dt class="text-sm font-medium text-tokanisecondary-600">Email Address</dt>
           <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0"><%= requestor.email %></dd>
         </div>
