--- a/app/views/requestors/_form.html.erb
+++ b/app/views/requestors/_form.html.erb
@@ -25,8 +25,6 @@
               </div>
 
               <%= form.fields_for :requestor_detail do |requestor_detail| %>
-             
-              
               <div class="col-span-6 sm:col-span-6 lg:col-span-3">
                   <%= requestor_detail.label :primary_phone, class: "block text-sm font-medium text-gray-700" %>
                   <%= requestor_detail.text_field :primary_phone, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
@@ -39,17 +37,32 @@
               <div class="col-span-6 sm:col-span-3">
                 <div class="form-group">
                     <%= requestor_detail.label :requestor_type, class: "block text-sm font-medium text-gray-700" %>
-                    <%= requestor_detail.select :requestor_type, options_for_select(requestor_type_options, requestor.requestor_detail.requestor_type), {}, class: "form-control" %>
+                    <%= requestor_detail.select :requestor_type, options_for_select(requestor_type_options, requestor.requestor_detail.requestor_type), {}, class: "form-control focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-s" %>
                   </div>
               </div>
 
-            <div class="col-span-6 sm:col-span-3">
+
+            <div class="col-span-6 sm:col-span-6" data-controller="select-group">
+              <div class="col-span-3 sm:col-span-3">
                 <div class="form-group">
-                    <%= requestor_detail.label :customer_id , class: "block text-sm font-medium text-gray-700"%>
-                    <%= requestor_detail.select :customer_id, options_from_collection_for_select(account_customers, :id, :name, requestor.requestor_detail.customer_id), {prompt: "Please select A Customer"}, {class: 'form-control' } %>
-                  </div>
+                  <%= requestor_detail.label :customer_id, class: "block text-sm font-medium text-gray-700" %>
+                  <%= requestor_detail.select :customer_id,  options_from_collection_for_select(account_customers, :id, :name, requestor.requestor_detail.customer_id ), {prompt: "Select A Customer First..."}, {class: 'form-control',  data: {action: 'change->select-group#updateSelectRemote', select_group_url_param: select_list_sites_path, select_group_select_key_param: 'customer_id', select_group_select_update_target_param: 'user_requestor_detail_attributes_site_id', select_group_select_clear_target_param: 'user_requestor_detail_department_id' }} %> 
+                </div>
+              </div>
+              <div class="col-span-3 sm:col-span-3">
+                <div class="form-group">
+                  <%= requestor_detail.label :site_id, class: 'text-blueCoral' %>
+                  <%= requestor_detail.select :site_id, options_from_collection_for_select(sites, :id, :name, requestor.requestor_detail.site_id), {}, {disabled: @field_disabled, class: 'form-control', data: {action: 'change->select-group#updateSelectRemote', select_group_url_param: department_select_list_sites_path, select_group_select_key_param: 'site_id', select_group_select_update_target_param: 'user_requestor_detail_attributes_department_id'}} %>
+                </div>
+             </div>
+              <div class="col-span-3 sm:col-span-3">
+                <div class="form-group">
+                  <%= requestor_detail.label :department_id, class: 'text-blueCoral' %>
+                  <%= requestor_detail.select :department_id, options_from_collection_for_select(departments, :id, :name, requestor.requestor_detail.department_id), {}, {disabled: @field_disabled, class: 'form-select'} %>
+                </div>
+              </div>
             </div>
-           
+
             <div class="col-span-6 sm:col-span-6 lg:col-span-4">
             <fieldset class="space-y-5">
               <legend class="sr-only">Requestor Permissions</legend>
