--- a/app/views/requestors/edit.html.erb
+++ b/app/views/requestors/edit.html.erb
@@ -20,7 +20,8 @@
           
 
                 <div class="p-8 bg-white rounded shadow">
-                  <%= render partial: "form", locals: { requestor: @requestor, account_customers: @account_customers } %>
+                  <%= render partial: "form", locals: { requestor: @requestor, account_customers: @account_customers, customers: @customers, sites: @sites, departments: @departments } %>
+                 
                  
                 </div>
             </div>
