--- a/app/views/requestors/new.html.erb
+++ b/app/views/requestors/new.html.erb
@@ -14,7 +14,7 @@
                 </div>      
                 </div>
                 <div class="p-8 bg-white rounded shadow">
-                  <%= render partial: "form", locals: { requestor: @requestor, account_customers: @account_customers } %>
+                  <%= render partial: "form", locals: { requestor: @requestor, account_customers: @account_customers, customers: @customers, sites: @sites, departments: @departments } %>
                 </div>
             </div>
           </div>
