[TK-153] Pay/Bill Configs - 80% implemented

--- a/app/views/shared/_left_nav.html.erb
+++ b/app/views/shared/_left_nav.html.erb
@@ -3,4 +3,4 @@
 <%= nav_link_to "Customers", customers_path, class: "nav-link" %>
 <%= nav_link_to "Specialties", specialties_path, class: "nav-link" %>
 <%= nav_link_to "Pay Bill Rates", pay_bill_rates_path, class: "nav-link" %>
-<%= nav_link_to "Languages", languages_path, class: "nav-link" %>
+<%= nav_link_to "Languages", languages_path, class: "nav-link" %><%= nav_link_to "Pay Bill Configs", pay_bill_configs_path, class: "nav-link" %>
